removing background-attachment fixed because it makes the background illustration disappear on tablet landscape views

--- a/trunk/web/css/screen.css
+++ b/trunk/web/css/screen.css
@@ -7,7 +7,6 @@
 }
 
 html {
-	background-attachment: fixed;
 	background-color: #580;
 	background-image: url(../img/simsab.png);
 	background-position: center bottom;
